# tiexiu

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  RULES.md  SYNTAX.md  main.py  pyproject.toml
.aiassistant/rules/: RULES.md
.github/: FUNDING.yml
.github/workflows/: codspeed.yml  default.yml  publish.yml  release.yml  test_publish.yml
arc/src/json/: tree_json.rs
benches/: parsing.rs
corpus/: AGENTS.md  RULES.md  SESSIONS.md
corpus/sessions/: session-ses_2622.md  session-ses_2688.md  session-ses_271a.md  session-ses_27bf.md  session-ses_2828.md  session-ses_285e.md  session-ses_288a.md  session-ses_28b7.md
corpus/summaries/: GPT54.md  SUMMARY.md
fragments/: _old_psd.rs  atomlist.md  calc_test.rs  call_once_lock.rst  children.rs  clap_color.rs  closure.rs  compute_error.rs  cst_to_json.rs  ctx_rules.rs  ctx_with_max_offset.rs  ctxi.rs  cut_with_furthest.rs  cutter.rs  debug_trait.rs  deref_str.rs  generic_cfg.rs  grammar_builder.rs  grammar_find_rule.rs  intern_rule.rs  into_box.rs  last_error_msg.rs  leftrec_grammar.rs  linker.rs  lookahead.rs  mem_replace.rs  memos.rs  model_impl.rs  model_impl_generic.rs  more_children.rs  optional_can_parse.rs  other_empty_line.rs  parse_choice.rs  parse_result.rs  parse_start.rs  peg_display.rs  prune_memo_cache.rs  rails_new.rs  re_export.rs  rule.cs  (+12 more)
grammar/: calc.json  tatsu.json
python/tests/: test_api.py  test_ooapi.py  test_syntax.py
python/tiexiu/: __init__.py  __main__.py  config.py  fnapi.py  ooapi.py  pyfnapi.py  pyooapi.py
src/: api.rs  cfg.rs  engine.rs  error.rs  lib.rs  main.rs  peg.rs  state.rs  trees.rs  util.rs
src/api/: _globalcache.rs  apifn.rs  cache.rs  fnapi.rs  mod.rs  ooapi.rs
src/astree/: ast.rs  cst.rs  mod.rs
src/cfg/: constants.rs  keys.rs  mod.rs  types.rs
src/context/: core.rs  corectx.rs  ctx.rs  ctxproxy.rs  error.rs  memo.rs  mod.rs  stackctx.rs  state.rs  str.rs  strctx.rs  trace.rs
src/contexts/: ast.rs  corectx.rs  cst.rs  ctx.rs  json.rs  leftrec.rs  memo.rs  mod.rs  strctx.rs
src/engine/: ast.rs  corectx.rs  cst.rs  ctx.rs  ctxproxy.rs  memo.rs  mod.rs  parsed.rs  stackctx.rs  state.rs  strctx.rs  trace.rs
src/grammars/: build.rs  choice.rs  grammar.rs  leftrec.rs  mod.rs  model.rs  nullability.rs  parser.rs  repeat.rs  rule.rs
src/input/: cursor.rs  error.rs  memento.rs  mod.rs  str.rs  strcursor.rs  text.rs  tokenizing.rs
src/json/: asjson.rs  boot.rs  cross.rs  error.rs  exp.rs  exp_json.rs  export.rs  export_tree.rs  import.rs  mod.rs  serde_export.rs  serde_import.rs  serde_tree.rs  tatsu.rs  tree.rs  tree_json.rs
src/json/tatsu/: export.rs  import.rs  model.rs
src/model/: ast.rs  basic.rs  build.rs  call.rs  choice.rs  closure.rs  cst.rs  ctx.rs  elements.rs  exp.rs  fold.rs  grammar.rs  group.rs  leftrec.rs  mod.rs  model.rs  named.rs  node.rs  nullability.rs  optional.rs  parsed.rs  parser.rs  pattern.rs  pretty.rs  psd.rs  repeat.rs  rule.rs  rulelike.rs  scope.rs  seq.rs  sequence.rs  state.rs  syntax.rs  token.rs  tpd.rs
src/peg/: boot.rs  build.rs  choices.rs  compile.rs  compiler.rs  defines.rs  error.rs  exp.rs  fold.rs  grammar.rs  leftrec.rs  linker.rs  lookahead.rs  mod.rs  nope.rs  nullability.rs  parser.rs  pretty.rs  repeat.rs  rule.rs
src/peg/analysis/: compiler.rs  defines.rs  leftrec.rs  linker.rs  lookahead.rs  mod.rs  nullability.rs
src/peg/error/: failure.rs  mod.rs  nope.rs  parse_error.rs
src/peg/parsing/: call.rs  choices.rs  exp.rs  expressions.rs  mod.rs  repeat.rs
src/python/: api.rs  grammar.rs  mod.rs  ooapi.rs  pyfnapi.rs  pyooapi.rs  tree.rs
src/state/: corectx.rs  ctx.rs  memo.rs  mod.rs  strctx.rs  trace.rs
src/tools/: mod.rs  pretty.rs  rails.rs
src/trees/: build.rs  fmt.rs  fold.rs  map.rs  mod.rs  short.rs  tags.rs  tree.rs
src/ui/: cli.rs  error.rs
src/util/: cfg.rs  finally.rs  fold.rs  fuse.rs  indent.rs  into.rs  lisp.rs  mod.rs  pyre.rs  strutil.rs  tokenlist.rs  tokenstack.rs
src/util/pyre/: error.rs  fancy.rs  mod.rs  pattern.rs  pcre2.rs  regex.rs  regexpp.rs  traits.rs
tests/: alerts_test.rs  ast_test.rs  basic_grammar_test.rs  bench_parse_test.rs  bootstrap.rs  bootstrap_test.rs  complex_grammars_test.rs  constants_test.rs  constraints_test.rs  directive_test.rs  directives_test.rs  ebnf_test.rs  eol_test.rs  error_handling_test.rs  error_test.rs  firstfollow_test.rs  fixtures.rs  grammar_structure_test.rs  ignored_tests.csv  input_positions_test.rs  integration_tests.rs  join_test.rs  json_crate_test.rs  json_value_import.rs  json_value_import_test.rs  keyword_test.rs  left_recursion_test.rs  lookahead_test.rs  misc_test.rs  model_test.rs  naming_test.rs  parameter_test.rs  parsing_test.rs  pattern_test.rs  patterns_test.rs  pretty_print_test.rs  pyre.rs  pyre_test.rs  regexpp_test.rs  round_trips_test.rs  (+36 more)
tests/fixtures/: data.rs  mod.rs
wip/tests/: alerts.rs  asjson.rs  ast.rs  bench_parse.rs  buffering.rs  cli.rs  codegen.rs  constants.rs  defines.rs  diagram.rs  directive.rs  ebnf.rs  error.rs  firstfollow.rs  ideps.rs  join.rs  keyword.rs  left_recursion.rs  lookahead.rs  misc.rs  mod.rs  model.rs  ngmodel.rs  parameter.rs  parser_equivalence.rs  parsing.rs  pattern.rs  pickle.rs  pretty.rs  railroads.rs  regexp.rs  return_value.rs  safe_name.rs  safeeval.rs  safeeval_stress.rs  semantics.rs  string.rs  strtools.rs  syntax.rs  typetools.rs  (+2 more)
