# Copyright (c) 2026 Juancarlo Añez (apalala@gmail.com)
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "TieXiu"
version = "0.1.1-alpha.2"
edition = "2024"
authors = ["Juancarlo Añez <apalala@gmail.com>"]
description = "A port of the TatSu PEG parser generator to Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neogeny/tiexiu"
readme = "README.md"
exclude = ["pyproject.toml", "__pycache__"]

#[lints.clippy]
#collapsible_match = "allow"

[lib]
name = "tiexiu"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tiexiu"
path = "src/main.rs"
required-features = ["cli"]

# --- Features ---
[features]
default = ["serde", "serde_json", "cli", "pyo3"]
bootstrap = ["default"]

# Specific feature groupings
serde = ["dep:serde"]
serde_json = [
    "dep:serde",
    "dep:serde_json",
    "dep:serde_path_to_error",
]
cli = [
    "dep:clap",
    "dep:syntect",
]
pyo3 = ["dep:pyo3"]
pcre2 = ["dep:pcre2"]
regex = ["dep:regex"]

# --- Core Library Dependencies ---
[dependencies]
indexmap = "2.13"
thiserror = "2.0.18"
fancy-regex = "0.17"
console = "0.16.3"

# --- PyO3 Dependencies ---
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }

# --- CLI Dependencies (Optional) ---
clap = { version = "4.6", features = ["derive"], optional = true }
syntect = { version = "5.3.0", optional = true }

# --- Serialization (Optional) ---
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", features = ["preserve_order"], optional = true }
serde_path_to_error = { version = "0.1", optional = true }
pcre2 = { version = "0.2.11", optional = true }
regex = { version = "1.12.3", optional = true }
unicode-width = "0.2.2"

# --- Debug & Benchmarking ---
[dev-dependencies]
criterion = { version = "4.4.1", package = "codspeed-criterion-compat" }

[[bench]]
name = "parsing"
harness = false
