# Copyright (c) 2026 Juancarlo Añez (apalala@gmail.com)
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "tiexiu"
version = "0.1.1-alpha.14"
edition = "2024"
authors = ["Juancarlo Añez <apalala@gmail.com>"]
description = "A port of the TatSu PEG parser generator to Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neogeny/tiexiu"
readme = "README.md"
exclude = ["pyproject.toml", "__pycache__"]

[profile.release]
opt-level = 3        # Max optimizations (0-3)
lto = true           # Link Time Optimization (smaller, faster binary)
codegen-units = 1    # Better optimizations at the cost of slower build time
panic = 'abort'      # Reduces binary size if you don't need stack unwinding
debug = 1

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]

#[lints.clippy]
#collapsible_match = "allow"

[lib]
name = "tiexiu"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tiexiu"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
bootstrap = ["default"]

dhat = ["dep:dhat"]
dhat-heap = []    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling

serde = ["dep:serde"]
serde_json = [
    "dep:serde",
    "dep:serde_json",
]
cli = [
    "dep:clap",
    "dep:syntect",
    "dep:indicatif",
    "malloc",
]
pyo3 = ["dep:pyo3", "serde", "malloc"]
malloc = ["dep:mimalloc"]

#interpolation = ["dep:strfmt", "dep:evalexpr"]

[dependencies]
indexmap = "2.13"
thiserror = "2.0.18"
fancy-regex = "0.18"
console = "0.16.3"
json = "0.12.4"

dhat = { version = "0.3.3", optional = true }

pyo3 = {
    version = "0.28",
    features = ["extension-module", "abi3-py312", "generate-import-lib"],
    optional = true
}

clap = { version = "4.6", features = ["derive"], optional = true }
syntect = { version = "5.3.0", optional = true }

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", features = ["preserve_order"], optional = true }
unicode-width = "0.2.2"
derivative = "2.2.0"
indicatif = { version = "0.18.4", optional = true }
mimalloc = { version = "0.1.50", optional = true }

#evalexpr = { version = "13.1.0", optional = true }
#strfmt = { version = "0.2.5", optional = true }

[dev-dependencies]
criterion = { version = "4.4.1", package = "codspeed-criterion-compat" }

[[bench]]
name = "parsing"
harness = false
