[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "TieXiu"
description = "High-performance PEG parsing (a port of TatSu to Rust)"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Juancarlo Añez", email = "apalala@gmail.com" }
]
license = "MIT OR Apache-2.0"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: General",
    "Development Status :: 3 - Alpha",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/neogeny/tiexiu"
Repository = "https://github.com/neogeny/tiexiu"
Issues = "https://github.com/neogeny/tiexiu/issues"

[tool.maturin]
features = ["pyo3", "malloc", "pyo3/abi3-py312", "pyo3/generate-import-lib"]
module-name = "tiexiu._tiexiu"
python-source = "python"
bindings = "pyo3"
#compatibility = "manylinux_2_28"

# Specify the Cargo profile (e.g., "release", "dev", or a custom one)
profile = "release"

# For 'maturin develop' specifically
editable-profile = "dev"

# List of Cargo features to activate
#features = ["simd", "parallel"]

# Equivalent to --all-features
all-features = true

# Equivalent to --no-default-features
no-default-features = false

# Pass raw arguments to cargo (rarely needed with the above)
#cargo-extra-args = ["--jobs", "8"]

# Pass raw arguments to rustc
rustc-extra-args = ["-C", "target-cpu=native"]

# include = ["grammars/**/*.ebnf", "assets/*.png"]
#compatibility = "abi3"
#compatibility = "off"
#compatibility = "manylinux2014"

[tool.uv]
# Tell uv which files should trigger a project rebuild
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "src/**/*.rs" },
    { file = "python/**/*.py" },
    { file = "grammar/tatsu.json" }
]

[tool.uv.sources]
tiexiu = { workspace = true }

[dependency-groups]
dev = [
    "maturin>=1.13.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "tiexiu",
    "uv>=0.11.7",
]
test = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
